--- a/6_Servlet/1_Servlet/src/main/webapp/WEB-INF/web.xml
+++ b/6_Servlet/1_Servlet/src/main/webapp/WEB-INF/web.xml
@@ -1,45 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
-    <!--
-		*web.xml파일
-		- 해당 웹 애플리케이션을 구동시키는 서버 start시 제일 먼저 읽혀지는 파일
-		- 배포 서술자라고 해서 해당 웹 애플리케이션의 기본적인 설정들을 작성하게 되어 있음
-		-개발자가 web.xml을 수정하지 않고도 개발 및 운영이 가능하다.
-		서비스 규모가 커지면 다양한 filter, servlet, wapper 등등 사용하고자 할 때 수정하면 된다.
-	-->
-  <display-name>1_Servlet</display-name>	
-  <!-- 
-  welcome-file-list는 url로 해당 애플리케이션의 루트로 요청 시 제일 먼저 보여지게 되는 메인페이지
-  http://구동중인 서버의 ip:포트번호/애플리케이션contextpath
-  
-  *context : 웹에서 전역적으로 사용할 수 있는 환경(이 환경에 접속할 수 있는 경로) / 프로젝트마다 생김(차후에 context라는 영역에 데이터를 추가or삭제 가능함)
-  
-  http://localhost:5000/st
-  해당 welcomefile들은 webapp/에 위치해있어야 찾아서 반환해준다.
-   -->
-
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>RequestGetServlet</display-name>
-    <servlet-name>RequestGetServlet</servlet-name>
-    <servlet-class>com.kh.controller.RequestGetServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>RequestGetServlet</servlet-name>
-    <url-pattern>/test1.do</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>test2.do</display-name>
-    <servlet-name>test2.do</servlet-name>
-    <servlet-class>com.kh.controller.RequestPostServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>test2.do</servlet-name>
-    <url-pattern>/test2.do</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="https://jakarta.ee/xml/ns/jakartaee"
+	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+	id="WebApp_ID" version="6.0">
+	<display-name>1_Servlet</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<description></description>
+		<display-name>RequestGetServlet</display-name>
+		<servlet-name>RequestGetServlet</servlet-name>
+		<servlet-class>com.kh.controller.RequestGetServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RequestGetServlet</servlet-name>
+		<url-pattern>/test1.do</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>test2.do</display-name>
+		<servlet-name>test2.do</servlet-name>
+		<servlet-class>com.kh.controller.RequestPostServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>test2.do</servlet-name>
+		<url-pattern>/test2.do</url-pattern>
+	</servlet-mapping>
 </web-app>
