--- a/7_JSP/jspProject/src/main/webapp/WEB-INF/web.xml
+++ b/7_JSP/jspProject/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,24 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>LoginController</display-name>
+    <servlet-name>LoginController</servlet-name>
+    <servlet-class>com.kh.member.controller.LoginController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginController</servlet-name>
+    <url-pattern>/LoginController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>login.me</display-name>
+    <servlet-name>login.me</servlet-name>
+    <servlet-class>com.kh.member.controller.LoginController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>login.me</servlet-name>
+    <url-pattern>/login.me</url-pattern>
+  </servlet-mapping>
 </web-app>
