--- a/7_JSP/jspProject/src/main/webapp/WEB-INF/web.xml
+++ b/7_JSP/jspProject/src/main/webapp/WEB-INF/web.xml
@@ -41,46 +41,6 @@
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>enrollForm.me</display-name>
-    <servlet-name>enrollForm.me</servlet-name>
-    <servlet-class>com.kh.member.controller.MemberEnrollFormController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>enrollForm.me</servlet-name>
-    <url-pattern>/enrollForm.me</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>insert.me</display-name>
-    <servlet-name>insert.me</servlet-name>
-    <servlet-class>com.kh.member.controller.MemberInsertController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>insert.me</servlet-name>
-    <url-pattern>/insert.me</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>myPage.me</display-name>
-    <servlet-name>myPage.me</servlet-name>
-    <servlet-class>com.kh.member.controller.MyPageController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>myPage.me</servlet-name>
-    <url-pattern>/myPage.me</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>updatePwd.me</display-name>
-    <servlet-name>updatePwd.me</servlet-name>
-    <servlet-class>com.kh.member.controller.MemberPwdUpdateController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>updatePwd.me</servlet-name>
-    <url-pattern>/updatePwd.me</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
     <display-name>delete.me</display-name>
     <servlet-name>delete.me</servlet-name>
     <servlet-class>com.kh.member.controller.MemberDeleteController</servlet-class>
@@ -238,5 +198,55 @@
   <servlet-mapping>
     <servlet-name>rlist.bo</servlet-name>
     <url-pattern>/rlist.bo</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>/logout.me</display-name>
+    <servlet-name>/logout.me</servlet-name>
+    <servlet-class>com.kh.member.controller.LogoutController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>/logout.me</servlet-name>
+    <url-pattern>//logout.me</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>enrollForm.me</display-name>
+    <servlet-name>enrollForm.me</servlet-name>
+    <servlet-class>com.kh.member.controller.MemberEnrollFormController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>enrollForm.me</servlet-name>
+    <url-pattern>/enrollForm.me</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>insert.me</display-name>
+    <servlet-name>insert.me</servlet-name>
+    <servlet-class>com.kh.member.controller.MemberInsertController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>insert.me</servlet-name>
+    <url-pattern>/insert.me</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>myPage.me</display-name>
+    <servlet-name>myPage.me</servlet-name>
+    <servlet-class>com.kh.member.controller.MyPageController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>myPage.me</servlet-name>
+    <url-pattern>/myPage.me</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>updatePwd.me</display-name>
+    <servlet-name>updatePwd.me</servlet-name>
+    <servlet-class>com.kh.member.controller.MemberPwdUpdateController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>updatePwd.me</servlet-name>
+    <url-pattern>/updatePwd.me</url-pattern>
   </servlet-mapping>
 </web-app>
